fix(server): add default volume path for build

--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     restart: unless-stopped
     volumes:
       - ${BACKUP_VOLUME_PATH}/.snapshots:/.snapshots
-      - ${BACKUP_PC_PATH}:/data/pc:ro
+      - ${BACKUP_PC_PATH:-./pc-data}:/data/pc:ro
       - bitwarden-data:/data/services/bitwarden/data:ro
       - ghost-content:/data/services/ghost/content:ro
       - gitlab-config:/data/services/gitlab/config:ro
