--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -128,6 +128,8 @@ services:
     networks:
       default:
         ipv4_address: ${DNS_IP}
+    ports:
+      - 53:53/udp
     restart: unless-stopped
     volumes:
       - pihole-etc:/etc/pihole
