feat(server-nginx): whitelist all internal adresses

--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -83,9 +83,9 @@ SMTP_PASSWORD="app password"
 SONARQUBE_PORT=9000
 
 TUNNEL_TOKEN=token
+TUNNEL_IP=${DEFAULT_NETWORK_PREFIX}.x
 
 TZ=Europe/Berlin
 
 VPN_PORT=51821
 VPN_PASSWORD=password
-VPN_IP=${DEFAULT_NETWORK_PREFIX}.x
