--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -1,9 +1,10 @@
 variables_hash_max_size 2024;
 variables_hash_bucket_size 128;
 
-map $remote_addr $is_vpn_ip {
-    default         false;
-    192.168.192.243 true;
+map $remote_addr $private_ip {
+    default           false;
+    192.168.192.243   false;
+    ~^192\.168\.192\. true;
 }
 
 server {
@@ -93,6 +94,10 @@ server {
     listen [::]:443 ssl http2;
     server_name docker.justinkonratt.com;
 
+    if ($is_vpn_ip = false) {
+        return 403;
+    }
+
     location / {
         client_max_body_size 1G;
         set $upstream docker-registry:$docker_registry_port;
@@ -144,6 +149,10 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
     server_name gitlab.justinkonratt.com;
+
+    if ($is_vpn_ip = false) {
+        return 403;
+    }
 
     location / {
         proxy_set_header X-Forwarded-Proto https;
