--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -1,7 +1,7 @@
 variables_hash_max_size 2024;
 variables_hash_bucket_size 128;
 
-map $remote_addr $private_ip {
+map $remote_addr $is_private_ip {
     default           false;
     192.168.192.243   false;
     ~^192\.168\.192\. true;
@@ -77,7 +77,7 @@ server {
     listen [::]:443 ssl http2;
     server_name dns.justinkonratt.com;
 
-    if ($is_vpn_ip = false) {
+    if ($is_private_ip = false) {
         return 403;
     }
 
@@ -94,7 +94,7 @@ server {
     listen [::]:443 ssl http2;
     server_name docker.justinkonratt.com;
 
-    if ($is_vpn_ip = false) {
+    if ($is_private_ip = false) {
         return 403;
     }
 
@@ -112,7 +112,7 @@ server {
     listen [::]:443 ssl http2;
     server_name docs.justinkonratt.com;
 
-    if ($is_vpn_ip = false) {
+    if ($is_private_ip = false) {
         return 403;
     }
 
@@ -131,7 +131,7 @@ server {
     listen [::]:443 ssl http2;
     server_name doku.justinkonratt.com;
 
-    if ($is_vpn_ip = false) {
+    if ($is_private_ip = false) {
         return 403;
     }
 
@@ -150,7 +150,7 @@ server {
     listen [::]:443 ssl http2;
     server_name gitlab.justinkonratt.com;
 
-    if ($is_vpn_ip = false) {
+    if ($is_private_ip = false) {
         return 403;
     }
 
@@ -171,7 +171,7 @@ server {
     listen [::]:443 ssl http2;
     server_name grafana.justinkonratt.com;
 
-    if ($is_vpn_ip = false) {
+    if ($is_private_ip = false) {
         return 403;
     }
 
@@ -228,7 +228,7 @@ server {
     listen [::]:443 ssl http2;
     server_name music-downloader.justinkonratt.com;
 
-    if ($is_vpn_ip = false) {
+    if ($is_private_ip = false) {
         return 403;
     }
 
@@ -248,7 +248,7 @@ server {
     listen [::]:443 ssl http2;
     server_name netdata.justinkonratt.com;
 
-    if ($is_vpn_ip = false) {
+    if ($is_private_ip = false) {
         return 403;
     }
 
@@ -267,7 +267,7 @@ server {
     listen [::]:443 ssl http2;
     server_name portainer.justinkonratt.com;
 
-    if ($is_vpn_ip = false) {
+    if ($is_private_ip = false) {
         return 403;
     }
 
@@ -284,7 +284,7 @@ server {
     listen [::]:443 ssl http2;
     server_name prometheus.justinkonratt.com;
 
-    if ($is_vpn_ip = false) {
+    if ($is_private_ip = false) {
         return 403;
     }
 
@@ -303,7 +303,7 @@ server {
     listen [::]:443 ssl http2;
     server_name scoreboard.justinkonratt.com;
 
-    if ($is_vpn_ip = false) {
+    if ($is_private_ip = false) {
         return 403;
     }
 
@@ -333,7 +333,7 @@ server {
     listen [::]:443 ssl http2;
     server_name vpn.justinkonratt.com;
 
-    if ($is_vpn_ip = false) {
+    if ($is_private_ip = false) {
         return 403;
     }
 
