refactor(server): no extra docker compose for renovate

--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -71,6 +71,9 @@ PORTAINER_PORT=9000
 
 PROMETHEUS_PORT=9090
 
+RENOVATE_TOKEN=token
+RENOVATE_GITHUB_COM_TOKEN=token
+
 SCOREBOARD_PORT=4500
 SCOREBOARD_AUTH_CLIENT_ID=scoreboard
 SCOREBOARD_AUTH_CLIENT_SECRET=secret
