--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -387,6 +387,17 @@ services:
       - ./prometheus:/etc/prometheus/
       - prometheus-data:/prometheus
 
+  renovate:
+    environment:
+      - RENOVATE_TOKEN=${RENOVATE_TOKEN}
+      - GIT_URL=https://${GITLAB_DOMAIN}
+      - GITHUB_COM_TOKEN=${RENOVATE_GITHUB_COM_TOKEN}
+    image: renovate/renovate
+    profiles:
+      - renovate
+    volumes:
+      - .renovate/config.js:/usr/src/app/config.js
+
   scoreboard:
     build:
       <<: *build-args
