fix(server-renovate): missing / before volume path

--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -396,7 +396,7 @@ services:
     profiles:
       - renovate
     volumes:
-      - .renovate/config.js:/usr/src/app/config.js
+      - ./renovate/config.js:/usr/src/app/config.js
 
   scoreboard:
     build:
