fix(server-music-downloader): add apk update to dockerfile for newest yt-dlp version

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ Thumbs.db
 /apps/server/.env
 /apps/server/just-site/.env
 /apps/server/renovate/.env
+
+# svelte
+/apps/server/just-site/.svelte-kit
