--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
         "eslint-plugin-svelte": "^2.35.1",
         "eslint-plugin-svelte3": "^4.0.0",
         "flowbite-svelte": "^0.44.24",
+        "glob": "^10.3.10",
         "husky": "^9.0.11",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
