--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -96,7 +96,7 @@ deploy:
     - ssh ${SSH_USER}@${SSH_HOST} docker login -u ${DOCKER_REGISTRY_USER} -p ${DOCKER_REGISTRY_PASSWORD} ${DOCKER_REGISTRY}
 
     # run deploy commands
-    - nr deploy-commands
+    - npx nx run-many -t deploy-command --parallel 1
     - scp deploy-commands.sh ${SSH_USER}@${SSH_HOST}:/tmp
     - ssh ${SSH_USER}@${SSH_HOST} chmod +x /tmp/deploy-commands.sh
     - ssh ${SSH_USER}@${SSH_HOST} /tmp/deploy-commands.sh
