--- a/apps/server/project.json
+++ b/apps/server/project.json
@@ -18,7 +18,7 @@
         "deploy-command": {
             "executor": "nx:run-commands",
             "options": {
-                "command": "echo docker compose -f /opt/monorepo/server/docker-compose.yml up -d --pull always --remove-orphans"
+                "command": "echo docker compose -f /opt/monorepo/server/docker-compose.yml up -d --pull always --remove-orphans > deploy-commands.sh"
             }
         },
         "lint": {
