--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -195,6 +195,19 @@ server {
 }
 
 server {
+    set_by_lua_block $linkwarden_port { return os.getenv("LINKWARDEN_PORT"); }
+
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name links.justinkonratt.com;
+
+    location / {
+        set $upstream linkwarden:$linkwarden_port;
+        proxy_pass http://$upstream;
+    }
+}
+
+server {
     set_by_lua_block $music_port { return os.getenv("MUSIC_PORT"); }
 
     listen 443 ssl http2;
