--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -20,8 +20,6 @@ BITWARDEN_PORT=80
 
 CACHE_PORT=6379
 
-CERTS_DIR=./certs
-
 DASHBOARD_DOMAIN=dashboard.justinkonratt.com
 DASHBOARD_PORT=80
 
@@ -50,6 +48,12 @@ GITLAB_AUTH_CLIENT_SECRET=secret
 GRAFANA_PORT=3000
 
 JUST_SITE_PORT=4500
+
+LINKWARDEN_DOMAIN=links.justinkonratt.com
+LINKWARDEN_PORT=3000
+LINKWARDEN_SECRET=secret
+LINKWARDEN_CLIENT_ID=client_id
+LINKWARDEN_CLIENT_SECRET=client_secret
 
 MUSIC_PORT=4533
 MUSIC_SUBNET=172.18.0.0/16
