feat(server-nginx): added rewrite rule to fix bug in auth callback

--- a/apps/server/dashboard/public/server.yml
+++ b/apps/server/dashboard/public/server.yml
@@ -13,6 +13,9 @@ sections:
         tags:
           - navidrome
         url: https://music.justinkonratt.com
+      - title: Linkwarden
+        icon: linkwarden.png
+        url: https://links.justinkonratt.com
       - title: Music Downloader
         icon: icon.svg
         url: https://music-downloader.justinkonratt.com
