--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -202,6 +202,7 @@ server {
     server_name links.justinkonratt.com;
 
     location / {
+        rewrite ^/api/auth/(.*)$ /api/v1/auth/$1 last;
         set $upstream linkwarden:$linkwarden_port;
         proxy_pass http://$upstream;
     }
