--- a/apps/server/dashboard/public/conf.yml
+++ b/apps/server/dashboard/public/conf.yml
@@ -1,6 +1,6 @@
 pageInfo:
   logo: /img/icon.png
-  title: Dashoard
+  title: Dashboard
 
 appConfig:
   customCss: ".item { padding: 0.5rem 0.1rem 0 0.1rem; } .opening-method-icon { display: none !important; } html[data-theme='nord'] .collapsable:nth-child(2n) { background: #d08770; } html[data-theme='nord'] .collapsable:nth-child(4n+3) { background: #ebcb8b; } html[data-theme='nord'] .collapsable:nth-child(4n) { background: #a3be8c; }"
@@ -22,34 +22,12 @@ appConfig:
       ":tg": https://www.google.com/search?q=%C3%BCbersetzung+deutsch+englisch+
       ":te": https://www.google.com/search?q=%C3%BCbersetzung+englisch+
 
-pages:
-  - name: Server
-    path: "server.yml"
-
 sections:
   - name: Learning
     displayData:
       cutToHeight: true
     icon: ":book:"
     items:
-      - title: Bootstrap Academy
-        icon: favicon
-        url: https://bootstrap.academy/skill-tree
-      - title: Code Academy
-        icon: favicon
-        url: https://www.codecademy.com/catalog
-      - title: Daily.dev
-        icon: favicon
-        url: https://app.daily.dev/my-feed
-      - title: Fireship
-        icon: favicon
-        url: https://www.youtube.com/c/Fireship/videos
-      - title: Developer Roadmaps
-        icon: favicon
-        url: https://roadmap.sh/
-      - title: SciHub
-        icon: favicon
-        url: https://sci-hub.se
       - title: Termine und Fristen
         icon: favicon
         url: https://www.hochschule-stralsund.de/studium-und-lehre/mein-studium/termine-und-fristen/
@@ -58,7 +36,7 @@ sections:
         url: https://sup.hochschule-stralsund.de/qisserver/rds?state=user&type=0&category=menu.browse&breadCrumbSource=&startpage=portal.vm&chco=y
       - title: Studienorganisation
         icon: favicon
-        url: https://www.hochschule-stralsund.de/host/fakultaeten/elektrotechnik-und-informatik/studienorganisation/
+        url: https://www.hochschule-stralsund.de/ws/studienorganisation/
       - title: Mensaplan
         icon: favicon
         url: https://stw-greifswald.de/essen/speiseplaene/mensa-stralsund/
@@ -68,11 +46,6 @@ sections:
       - title: Moodle
         icon: favicon
         url: https://moodle.hochschule-stralsund.de
-    widgets:
-      - type: github-profile-stats
-        options:
-          username: CodesDoWork
-          hideLanguagesCard: true
   - name: Tools
     displayData:
       cutToHeight: true
@@ -83,89 +56,21 @@ sections:
         tags:
           - übersetzer
         url: https://www.google.com/search?q=%C3%BCbersetzer
+      - title: YouTube
+        icon: favicon
+        url: https://youtube.com
+      - title: Lichess
+        icon: favicon
+        url: https://lichess.org
       - title: ChatGPT
         icon: favicon
         url: https://chat.openai.com
-      - title: Gravatar
-        icon: favicon
-        url: https://de.gravatar.com
-      - title: Language Tool
-        icon: favicon
-        url: https://languagetool.org
-      - title: Ni Package Manager
-        icon: favicon
-        url: https://www.npmjs.com/package/@antfu/ni
       - title: TS Playground
         icon: favicon
         url: https://www.typescriptlang.org/play
       - title: Regex 101
         icon: favicon
         url: https://regex101.com
-      - title: Codeium
-        icon: favicon
-        url: https://codeium.com
-      - title: Wave Generator
-        icon: favicon
-        url: https://getwaves.io
-      - title: Blobmaker
-        icon: favicon
-        url: https://www.blobmaker.app
-      - title: SVG Generators
-        icon: favicon
-        url: https://fffuel.co/
-    widgets:
-      - type: clock
-        options:
-          timezone: Europe/Berlin
-          format: de-DE
-          hideDate: true
-  - name: Resources
-    displayData:
-      cutToHeight: true
-    icon: "📚"
-    items:
-      - title: Google TS Styleguide
-        icon: favicon
-        url: https://google.github.io/styleguide/tsguide.html
-      - title: Markdown Emojis
-        icon: favicon
-        url: https://gist.github.com/rxaviers/7360908
-      - title: Google Fonts
-        icon: favicon
-        url: https://fonts.google.com
-      - title: Iconify
-        icon: favicon
-        url: https://iconify.design
-      - title: Tailwind Docs
-        icon: favicon
-        url: https://tailwindcss.com/docs
-      - title: Cool CSS Elements
-        icon: favicon
-        url: https://uiverse.io
-      - title: DevSecOps Periodic Table
-        icon: favicon
-        url: https://digital.ai/learn/devsecops-periodic-table
-      - title: HTML Head Guide
-        icon: favicon
-        url: https://htmlhead.dev
-      - title: Self Hosted Guides
-        icon: favicon
-        url: https://noted.lol
-      - title: Self Hosted Apps
-        icon: favicon
-        url: https://awesome-selfhosted.net
-      - title: "Lazyweb: Dev Resources"
-        icon: favicon
-        url: https://app.lazyweb.rocks
-      - title: "OWASP: Security"
-        icon: favicon
-        url: https://owasp.org
-      - title: Lofi Music
-        icon: favicon
-        url: https://lofi-life.vercel.app
-      - title: Lyricsify
-        icon: favicon
-        url: https://www.lyricsify.com
   - name: Work
     displayData:
       cutToHeight: true
@@ -188,37 +93,6 @@ sections:
       - title: Personizer
         icon: favicon
         url: https://www.personizer.com/app/absence-dashboards/personal/
-      - title: "RxResume: CV Builder"
-        icon: favicon
-        url: https://rxresu.me
-    widgets:
-      - type: public-holidays
-        options:
-          country: DE
-          region: MV
-          holidayType: all
-          monthsToShow: 12
-          lang: de
-  - name: Finances
-    displayData:
-      cutToHeight: true
-    icon: "💸"
-    items:
-      - title: Die Contra
-        icon: favicon
-        url: https://www.die-contra.de
-      - title: Erfolgskongress
-        icon: favicon
-        url: https://www.erfolgskongress.de
-      - title: Modern Banking
-        icon: favicon
-        url: https://www.modern-banking.de
-      - title: Brutto Netto Rechner
-        icon: favicon
-        url: https://www.brutto-netto-rechner.info
-      - title: Bundesanzeiger
-        icon: favicon
-        url: https://www.bundesanzeiger.de
   - name: Server
     displayData:
       cutToHeight: true
@@ -233,41 +107,105 @@ sections:
       - title: Strato
         icon: favicon
         url: https://www.strato.de/apps/CustomerService
-      - title: Server Dashboard
-        icon: dashy.png
-        url: /home/server
-        hotkey: 1
-  - name: Content Creation
+    widgets:
+      - type: clock
+        options:
+          timezone: Europe/Berlin
+          format: de-DE
+          hideDate: true
+  - name: Misc
     displayData:
       cutToHeight: true
-    icon: ":pencil:"
+    icon: ":wrench:"
     items:
-      - title: Canva
-        icon: favicon
-        url: https://www.canva.com
-      - title: Pexels
-        icon: favicon
-        url: https://www.pexels.com
-      - title: Pixabay
-        icon: favicon
-        url: https://pixabay.com/
-      - title: Freepic
-        icon: favicon
-        url: https://www.freepik.com/
-  - name: Firefox Addons
+      - title: Music
+        icon: navidrome.png
+        tags:
+          - navidrome
+        url: https://music.justinkonratt.com
+      - title: Linkwarden
+        icon: linkwarden.png
+        url: https://links.justinkonratt.com
+      - title: Music Downloader
+        icon: icon.svg
+        url: https://music-downloader.justinkonratt.com
+      - title: Scoreboard
+        icon: icon.svg
+        url: https://scoreboard.justinkonratt.com
+      - title: Website
+        icon: icon.svg
+        url: https://justinkonratt.com
+      - title: Blog
+        icon: ghost.png
+        url: https://blog.justinkonratt.com
+  - name: Admin
     displayData:
       cutToHeight: true
-    icon: ":globe_with_meridians:"
+    icon: ":construction_worker:"
     items:
-      - title: Language Tool
-        url: https://addons.mozilla.org/de/firefox/addon/languagetool
-      - title: Adblock Plus
-        url: https://addons.mozilla.org/de/firefox/addon/adblock-plus
-      - title: I don't care about cookies
-        url: https://addons.mozilla.org/de/firefox/addon/i-dont-care-about-cookies
-      - title: ICloud Bookmarks
-        url: https://addons.mozilla.org/de/firefox/addon/icloud-bookmarks
-      - title: New Tab Override
-        url: https://addons.mozilla.org/de/firefox/addon/new-tab-override
-      - title: Simple Translate
-        url: https://addons.mozilla.org/de/firefox/addon/simple-translate
+      - title: Auth
+        icon: keycloak.svg
+        url: https://auth.justinkonratt.com
+      - title: Portainer
+        icon: portainer.svg
+        tags:
+          - docker
+          - container
+        url: https://portainer.justinkonratt.com
+      - title: DNS
+        icon: pihole.png
+        url: https://dns.justinkonratt.com/admin
+      - title: VPN
+        icon: wireguard.svg
+        url: https://vpn.justinkonratt.com
+      - title: Bitwarden
+        icon: vaultwarden.svg
+        url: https://bitwarden.justinkonratt.com
+      - title: Logout
+        icon: logout.svg
+        url: https://dashboard.justinkonratt.com/callback-logout
+  - name: Dev
+    displayData:
+      cutToHeight: true
+    icon: ":computer:"
+    items:
+      - title: Docs
+        icon: icon.svg
+        tags:
+          - vitepress
+        url: https://docs.justinkonratt.com
+      - title: Gitlab
+        icon: gitlab.svg
+        url: https://gitlab.justinkonratt.com
+      - title: SonarQube
+        icon: sonarqube.png
+        tags:
+          - cicd
+        url: https://sonar.justinkonratt.com
+    widgets:
+      - type: github-profile-stats
+        options:
+          username: CodesDoWork
+          hideLanguagesCard: true
+  - name: Monitoring
+    displayData:
+      cutToHeight: true
+    icon: "🖥️"
+    items:
+      - title: Netdata
+        icon: netdata.png
+        url: https://netdata.justinkonratt.com
+      - title: Prometheus
+        icon: prometheus.svg
+        url: https://prometheus.justinkonratt.com
+      - title: Grafana
+        icon: grafana.svg
+        url: https://grafana.justinkonratt.com
+    widgets:
+      - type: public-holidays
+        options:
+          country: DE
+          region: MV
+          holidayType: all
+          monthsToShow: 12
+          lang: de
