--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -62,7 +62,9 @@ server {
     listen [::]:443 ssl http2;
     server_name dashboard.justinkonratt.com;
 
-    access_by_lua_file /etc/nginx/lua/access.lua;
+    if ($is_private_ip = false) {
+        access_by_lua_file /etc/nginx/lua/access.lua;
+    }
 
     location / {
         set $upstream dashboard:$dashboard_port;
@@ -116,8 +118,6 @@ server {
         return 403;
     }
 
-    access_by_lua_file /etc/nginx/lua/access.lua;
-
     location / {
         set $upstream documentation:$documentation_port;
         proxy_pass http://$upstream;
@@ -134,8 +134,6 @@ server {
     if ($is_private_ip = false) {
         return 403;
     }
-
-    access_by_lua_file /etc/nginx/lua/access.lua;
 
     location / {
         set $upstream doku:$doku_port;
