--- a/apps/server/prometheus/prometheus.yml
+++ b/apps/server/prometheus/prometheus.yml
@@ -31,7 +31,6 @@ scrape_configs:
   #################################################################################################
 
   - job_name: netdata
-
     metrics_path: "/api/v1/allmetrics"
     params:
       # format: prometheus | prometheus_all_hosts
@@ -48,4 +47,23 @@ scrape_configs:
     honor_labels: true
     static_configs:
       - targets: ["194.164.202.152:19999"]
+  #################################################################################################
+
+  - job_name: gitlab
+    metrics_path: "/-/metrics"
+    params:
+      # format: prometheus | prometheus_all_hosts
+      # You can use `prometheus_all_hosts` if you want Prometheus to set the `instance` to your hostname instead of IP
+      format: [prometheus]
+      #
+      # source: as-collected | raw | average | sum | volume
+      # default is: average
+      #source: [as-collected]
+      #
+      # server name for this prometheus - the default is the client IP
+      # for Netdata to uniquely identify it
+      #server: ["prometheus1"]
+    honor_labels: true
+    static_configs:
+      - targets: ["gitlab"]
 #################################################################################################
