--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -352,3 +352,16 @@ server {
         proxy_pass http://$upstream;
     }
 }
+
+server {
+    set_by_lua_block $wandb_port { return os.getenv("WANDB_PORT"); }
+
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name wandb.justinkonratt.com;
+
+    location / {
+        set $upstream wandb:$wandb_port;
+        proxy_pass http://$upstream;
+    }
+}
