feat(server): add adminer

--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -5,6 +5,8 @@ EMAIL=email
 DEFAULT_NETWORK_PREFIX=x.x.x
 DEFAULT_NETWORK_MASK=${DEFAULT_NETWORK_PREFIX}.0/24
 
+ADMINER_PORT=8080
+
 AUTH_PASSWORD=pass
 AUTH_DOMAIN=auth.${DOMAIN}
 AUTH_PORT=8080
