--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -6,6 +6,10 @@ x-build-args:
       - PROJECT
 
 services:
+  adminer:
+    image: adminer
+    restart: unless-stopped
+
   auth:
     command:
       - start
