--- a/apps/server/nginx/envs.conf
+++ b/apps/server/nginx/envs.conf
@@ -1,14 +1,16 @@
 env DOMAIN;
 env SERVER_ADDRESS;
 
-env DASHBOARD_DOMAIN;
-env DASHBOARD_PORT;
+env ADMINER_PORT;
 
 env AUTH_DOMAIN;
 env AUTH_PORT;
 env AUTH_REALM;
 
 env BITWARDEN_PORT;
+
+env DASHBOARD_DOMAIN;
+env DASHBOARD_PORT;
 
 env DNS_WEB_PORT;
 
