--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -14,6 +14,23 @@ server {
 }
 
 server {
+    set_by_lua_block $adminer_port { return os.getenv("ADMINER_PORT"); }
+
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name adminer.justinkonratt.com;
+
+    if ($is_private_ip = false) {
+        return 403;
+    }
+
+    location / {
+        set $upstream adminer:$adminer_port;
+        proxy_pass http://$upstream;
+    }
+}
+
+server {
     set_by_lua_block $auth_port { return os.getenv("AUTH_PORT"); }
 
     listen 443 ssl http2;
