--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -22,6 +22,11 @@ BITWARDEN_PORT=80
 
 CACHE_PORT=6379
 
+CMS_ADMIN_PASSWORD=pass
+CMS_SECRET=secret
+CMS_AUTH_CLIENT_ID=directus
+CMS_AUTH_CLIENT_SECRET=secret
+
 DASHBOARD_DOMAIN=dashboard.justinkonratt.com
 DASHBOARD_PORT=80
 
