--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -45,6 +45,7 @@ services:
       - ${BACKUP_VOLUME_PATH}/.snapshots:/.snapshots
       - ${BACKUP_PC_PATH:-./pc-data}:/data/pc:ro
       - bitwarden-data:/data/services/bitwarden/data:ro
+      - directus-uploads:/data/services/directus/uploads:ro
       - ghost-content:/data/services/ghost/content:ro
       - gitlab-config:/data/services/gitlab/config:ro
       - gitlab-data:/data/services/gitlab/data:ro
@@ -107,16 +108,21 @@ services:
 
   cms:
     environment:
-      - SECRET="replace-with-secure-random-value"
-      - ADMIN_EMAIL=""
-      - ADMIN_PASSWORD=""
-      - DB_CLIENT="pg"
-      - DB_HOST="database"
-      - DB_PORT="5432"
-      - DB_DATABASE="directus"
-      - DB_USER="directus"
-      - DB_PASSWORD="directus"
-
+      - SECRET=${CMS_SECRET}
+      - ADMIN_EMAIL=${EMAIL}
+      - ADMIN_PASSWORD=${CMS_ADMIN_PASSWORD}
+      - PUBLIC_URL=https://cms.${DOMAIN}
+      - DB_CLIENT=pg
+      - DB_HOST=db
+      - DB_PORT=5432
+      - DB_DATABASE=directus
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - AUTH_KEYCLOAK_DRIVER=openid
+      - AUTH_KEYCLOAK_CLIENT_ID=${CMS_AUTH_CLIENT_ID}
+      - AUTH_KEYCLOAK_CLIENT_SECRET=${CMS_AUTH_CLIENT_SECRET}
+      - AUTH_KEYCLOAK_ISSUER_URL=https://${AUTH_DOMAIN}/realms/${AUTH_REALM}/.well-known/openid-configuration
+      - AUTH_KEYCLOAK_IDENTIFIER_KEY=email
     image: directus/directus:10.12
     restart: unless-stopped
     volumes:
@@ -246,7 +252,7 @@ services:
           'MALLOC_CONF' => 'dirty_decay_ms:1000,muzzy_decay_ms:1000'
         }
         prometheus_monitoring['enable'] = true
-    image: gitlab/gitlab-ee:latest
+    image: gitlab/gitlab-ee:16.11.5-ee.0
     restart: unless-stopped
     shm_size: "256m"
     volumes:
@@ -504,6 +510,8 @@ services:
 
 volumes:
   bitwarden-data:
+
+  directus-uploads:
 
   docker-registry:
 
