feat(server): add cms to nginx

--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -26,6 +26,7 @@ CMS_ADMIN_PASSWORD=pass
 CMS_SECRET=secret
 CMS_AUTH_CLIENT_ID=directus
 CMS_AUTH_CLIENT_SECRET=secret
+CMS_PORT=8055
 
 DASHBOARD_DOMAIN=dashboard.justinkonratt.com
 DASHBOARD_PORT=80
