--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -60,6 +60,23 @@ server {
 }
 
 server {
+    set_by_lua_block $cms_port { return os.getenv("CMS_PORT"); }
+
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name cms.justinkonratt.com;
+
+    if ($is_private_ip = false) {
+        return 403;
+    }
+
+    location / {
+        set $upstream cms:$cms_port;
+        proxy_pass http://$upstream;
+    }
+}
+
+server {
     set_by_lua_block $ghost_port { return os.getenv("GHOST_PORT"); }
 
     listen 443 ssl http2;
