feat(server): update dashboard and cms config

--- a/apps/server/dashboard/public/conf.yml
+++ b/apps/server/dashboard/public/conf.yml
@@ -189,7 +189,7 @@ sections:
           - cicd
         url: https://sonar.justinkonratt.com
       - title: WandB
-        icon: wandb.png
+        icon: wandb.svg
         url: https://wandb.justinkonratt.com
     widgets:
       - type: github-profile-stats
