--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -118,6 +118,9 @@ services:
       - DB_DATABASE=directus
       - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
+      - AUTH_PROVIDERS=keycloak
+      - AUTH_KEYCLOAK_ALLOW_PUBLIC_REGISTRATION=true
+      - AUTH_KEYCLOAK_DEFAULT_ROLE_ID=2c1d9be2-93c2-4693-8200-6351976a034e
       - AUTH_KEYCLOAK_DRIVER=openid
       - AUTH_KEYCLOAK_CLIENT_ID=${CMS_AUTH_CLIENT_ID}
       - AUTH_KEYCLOAK_CLIENT_SECRET=${CMS_AUTH_CLIENT_SECRET}
