fix(server-renovate): add dns

--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -432,6 +432,7 @@ services:
       - prometheus-data:/prometheus
 
   renovate:
+    dns: ${DNS_IP}
     environment:
       - RENOVATE_TOKEN=${RENOVATE_TOKEN}
       - GIT_URL=https://${GITLAB_DOMAIN}
