--- a/apps/server/just-site/.env.template
+++ b/apps/server/just-site/.env.template
@@ -2,6 +2,10 @@ GHOST_API_KEY=key
 
 GITHUB_TOKEN=token
 
+CMS_URL=https://cms.justinkonratt.com
+CMS_USER=justsitebot@justinkonratt.com
+CMS_PASSWORD=password
+
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=email
