--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
         "cypress": "^13.7.3",
         "emailjs": "^4.0.3",
         "esbuild": "^0.20.2",
-        "eslint": "9.0.0",
+        "eslint": "^8.57.0",
         "eslint-config-next": "14.2.1",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-cypress": "2.15.2",
@@ -116,6 +116,7 @@
         "vitest": "^1.5.0"
     },
     "dependencies": {
+        "@directus/sdk": "^16.1.1",
         "@fastify/swagger": "^8.14.0",
         "@fastify/swagger-ui": "^3.0.0",
         "@fastify/websocket": "^10.0.1",
