--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -213,10 +213,16 @@ server {
 
 server {
     set_by_lua_block $just_site_port { return os.getenv("JUST_SITE_PORT"); }
+    set_by_lua_block $cms_port { return os.getenv("CMS_PORT"); }
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
     server_name justinkonratt.com;
+
+    location /assets/ {
+            set $upstream cms:$cms_port;
+            proxy_pass http://$upstream;
+        }
 
     location / {
         set $upstream just-site:$just_site_port;
