style(server-just-site): reformat

--- a/package.json
+++ b/package.json
@@ -96,6 +96,9 @@
         "pino-pretty": "^11.0.0",
         "postcss": "^8.4.38",
         "prettier": "^3.2.5",
+        "prettier-plugin-organize-imports": "^4.0.0",
+        "prettier-plugin-svelte": "^3.2.6",
+        "prettier-plugin-tailwindcss": "^0.6.5",
         "replace-in-files-cli": "^2.2.0",
         "rimraf": "^5.0.5",
         "secretlint": "^8.2.3",
