--- a/.prettierrc
+++ b/.prettierrc
@@ -19,6 +19,17 @@
             "options": {
                 "tabWidth": 2
             }
+        },
+        {
+            "files": "*.svelte",
+            "options": {
+                "parser": "svelte"
+            }
         }
+    ],
+    "plugins": [
+        "prettier-plugin-svelte",
+        "prettier-plugin-organize-imports",
+        "prettier-plugin-tailwindcss"
     ]
 }
