--- a/apps/server/backup-service/rsnapshot.conf
+++ b/apps/server/backup-service/rsnapshot.conf
@@ -18,7 +18,7 @@ config_version	1.2
 # SNAPSHOT ROOT DIRECTORY #
 ###########################
 
-# All snapshots will be stored under this root directory.
+# All snapshots will be stored under this run_backups directory.
 #
 snapshot_root	/.snapshots/
 
@@ -90,10 +90,10 @@ cmd_postexec	/usr/bin/du -d 1 /.snapshots/ > /.snapshots/snapshotSizes
 # e.g. alpha, beta, gamma, etc.         #
 #########################################
 
-retain	alpha	12
-retain	beta	7
-retain	gamma	4
-retain	delta	3
+retain	alpha	7
+retain	beta	4
+retain	gamma	3
+retain	delta	0
 
 ############################################
 #              GLOBAL OPTIONS              #
@@ -237,10 +237,10 @@ backup	/data/		localhost/
 
 # EXAMPLE.COM
 #backup_exec	/bin/date "+ backup of example.com started at %c"
-#backup	root@example.com:/home/	example.com/	+rsync_long_args=--bwlimit=16,exclude=core
-#backup	root@example.com:/etc/	example.com/	exclude=mtab,exclude=core
-#backup_exec	ssh root@example.com "mysqldump -A > /var/db/dump/mysql.sql"
-#backup	root@example.com:/var/db/dump/	example.com/
+#backup	run_backups@example.com:/home/	example.com/	+rsync_long_args=--bwlimit=16,exclude=core
+#backup	run_backups@example.com:/etc/	example.com/	exclude=mtab,exclude=core
+#backup_exec	ssh run_backups@example.com "mysqldump -A > /var/db/dump/mysql.sql"
+#backup	run_backups@example.com:/var/db/dump/	example.com/
 #backup_exec	/bin/date "+ backup of example.com ended at %c"
 
 # CVS.SOURCEFORGE.NET
