--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -66,6 +66,7 @@ services:
       - sonarqube-extensions:/data/services/sonarqube/extensions:ro
       - vpn-data:/data/services/vpn/data:ro
       - wandb-data:/data/services/wandb/data:ro
+      - ./backup-service/rsnapshot.conf:fix/config/rsnapshot.conf:ro
 
   bitwarden:
     environment:
