--- a/package.json
+++ b/package.json
@@ -36,48 +36,45 @@
     },
     "devDependencies": {
         "@iconify/svelte": "^3.1.6",
-        "@nx/cypress": "18.2.4",
-        "@nx/esbuild": "18.2.4",
-        "@nx/eslint": "18.2.4",
-        "@nx/eslint-plugin": "18.2.4",
-        "@nx/jest": "18.2.4",
-        "@nx/js": "18.2.4",
-        "@nx/next": "18.2.4",
-        "@nx/node": "18.2.4",
-        "@nx/react": "18.2.4",
-        "@nx/vite": "18.2.4",
-        "@nx/web": "18.2.4",
-        "@nx/workspace": "18.2.4",
+        "@nx/esbuild": "19.5.3",
+        "@nx/eslint": "19.5.3",
+        "@nx/eslint-plugin": "19.5.3",
+        "@nx/jest": "19.5.3",
+        "@nx/js": "19.5.3",
+        "@nx/next": "19.5.3",
+        "@nx/node": "19.5.3",
+        "@nx/react": "19.5.3",
+        "@nx/vite": "19.5.3",
+        "@nx/web": "19.5.3",
+        "@nx/workspace": "19.5.3",
         "@octokit/types": "^13.4.1",
         "@secretlint/secretlint-rule-preset-recommend": "^8.2.3",
         "@sveltejs/adapter-node": "^5.0.1",
         "@sveltejs/kit": "^2.5.6",
         "@sveltejs/vite-plugin-svelte": "^3.1.0",
-        "@swc-node/register": "~1.9.0",
-        "@swc/cli": "~0.3.12",
-        "@swc/core": "1.4.14",
-        "@testing-library/react": "15.0.2",
+        "@swc-node/register": "1.9.2",
+        "@swc/cli": "0.3.14",
+        "@swc/core": "1.5.7",
+        "@testing-library/react": "15.0.6",
         "@types/d3": "^7.4.3",
         "@types/jest": "^29.5.12",
         "@types/node": "20.12.7",
         "@types/node-cron": "^3.0.11",
         "@types/pg": "^8.11.5",
-        "@types/react": "18.2.79",
-        "@types/react-dom": "18.2.25",
-        "@typescript-eslint/eslint-plugin": "7.7.0",
-        "@typescript-eslint/parser": "7.7.0",
+        "@types/react": "18.3.1",
+        "@types/react-dom": "18.3.0",
+        "@typescript-eslint/eslint-plugin": "7.16.0",
+        "@typescript-eslint/parser": "7.16.0",
         "@vitest/ui": "^1.5.0",
         "autoprefixer": "^10.4.19",
         "babel-jest": "^29.7.0",
         "copy-file": "^11.0.0",
         "copyfiles": "^2.4.1",
-        "cypress": "^13.7.3",
         "emailjs": "^4.0.3",
         "esbuild": "^0.20.2",
         "eslint": "^8.57.0",
-        "eslint-config-next": "14.2.1",
+        "eslint-config-next": "14.2.3",
         "eslint-config-prettier": "9.1.0",
-        "eslint-plugin-cypress": "2.15.2",
         "eslint-plugin-import": "2.29.1",
         "eslint-plugin-jsx-a11y": "6.8.0",
         "eslint-plugin-prettier": "^5.1.3",
@@ -92,9 +89,9 @@
         "jest-environment-jsdom": "^29.7.0",
         "jest-environment-node": "^29.7.0",
         "jsdom": "~24.0.0",
-        "nx": "18.2.4",
+        "nx": "19.5.3",
         "pino-pretty": "^11.0.0",
-        "postcss": "^8.4.38",
+        "postcss": "8.4.38",
         "prettier": "^3.2.5",
         "prettier-plugin-organize-imports": "^4.0.0",
         "prettier-plugin-svelte": "^3.2.6",
@@ -106,13 +103,13 @@
         "svelte": "^4.2.14",
         "svelte-check": "^3.6.9",
         "svelte-infinite-scroll": "^2.0.1",
-        "tailwindcss": "^3.4.3",
+        "tailwindcss": "3.4.3",
         "touch": "^3.1.0",
         "ts-jest": "29.1.2",
         "ts-node": "10.9.2",
         "typedoc": "^0.25.13",
         "typedoc-plugin-markdown": "^3.17.1",
-        "typescript": "5.4.5",
+        "typescript": "5.5.4",
         "vite": "^5.2.9",
         "vitepress": "1.1.0",
         "vitest": "^1.5.0"
@@ -124,7 +121,7 @@
         "@fastify/websocket": "^10.0.1",
         "@mermaid-js/mermaid-mindmap": "^9.3.0",
         "@notionhq/client": "^2.2.15",
-        "@swc/helpers": "0.5.10",
+        "@swc/helpers": "0.5.12",
         "@t3-oss/env-core": "^0.9.2",
         "@tailwindcss/forms": "^0.5.7",
         "@trpc/client": "^10.45.2",
@@ -139,14 +136,14 @@
         "fastify": "^4.26.2",
         "mermaid": "~9.1.7",
         "moment": "^2.30.1",
-        "next": "^14.2.1",
+        "next": "14.2.3",
         "next-auth": "^4.24.7",
         "node-cron": "^3.0.3",
         "pg": "^8.11.5",
         "pg-hstore": "^2.3.4",
         "pino": "^8.20.0",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
+        "react": "18.3.1",
+        "react-dom": "18.3.1",
         "react-icons": "^5.1.0",
         "sequelize": "^6.37.3",
         "trpc-openapi": "^1.2.0",
