fix(server-backup-service): config path and config correctness

--- a/apps/server/backup-service/rsnapshot.conf
+++ b/apps/server/backup-service/rsnapshot.conf
@@ -93,7 +93,7 @@ cmd_postexec	/usr/bin/du -d 1 /.snapshots/ > /.snapshots/snapshotSizes
 retain	alpha	7
 retain	beta	4
 retain	gamma	3
-retain	delta	0
+# retain	delta	0
 
 ############################################
 #              GLOBAL OPTIONS              #
