chore(server): update gitlab

--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -255,7 +255,7 @@ services:
           'MALLOC_CONF' => 'dirty_decay_ms:1000,muzzy_decay_ms:1000'
         }
         prometheus_monitoring['enable'] = true
-    image: gitlab/gitlab-ee:16.11.5-ee.0
+    image: gitlab/gitlab-ee
     restart: unless-stopped
     shm_size: "256m"
     volumes:
