--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,6 +20,7 @@
         "strictNullChecks": true,
         "paths": {
             "branding-assets/*": ["libs/branding/assets/*"],
+            "server/directus": ["libs/server/directus/src/index.ts"],
             "shared/fastify": ["libs/shared/fastify/src/index.ts"],
             "shared/health": ["libs/shared/health/src/index.ts"],
             "shared/logging": ["libs/shared/logging/src/index.ts"],
