feat(server-just-site): added sitemap

--- a/apps/server/just-site/.env.template
+++ b/apps/server/just-site/.env.template
@@ -1,6 +1,6 @@
-GHOST_API_KEY=key
-
 GITHUB_TOKEN=token
+
+DOMAIN=https://justinkonratt.com
 
 CMS_URL=https://cms.justinkonratt.com
 CMS_USER=justsitebot@justinkonratt.com
