--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
         "vitepress-plugin-auto-sidebar": "^1.2.0",
         "vitepress-plugin-mermaid": "2.0.10",
         "vue": "^3.4.35",
+        "xmlbuilder2": "^3.1.1",
         "zod": "^3.22.4"
     }
 }
