--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "secretlint": "secretlint --secretlintignore .gitignore \"**/*\""
     },
     "devDependencies": {
+        "@bitwarden/cli": "^2024.8.1",
         "@iconify/svelte": "^4.0.2",
         "@nx/esbuild": "19.6.0",
         "@nx/eslint": "19.6.0",
@@ -43,6 +44,7 @@
         "@nx/js": "19.6.0",
         "@nx/next": "19.6.0",
         "@nx/node": "19.6.0",
+        "@nx/plugin": "19.6.0",
         "@nx/react": "19.6.0",
         "@nx/vite": "19.6.0",
         "@nx/web": "19.6.0",
@@ -121,6 +123,7 @@
         "@fastify/websocket": "^10.0.1",
         "@mermaid-js/mermaid-mindmap": "^9.3.0",
         "@notionhq/client": "^2.2.15",
+        "@nx/devkit": "19.6.0",
         "@swc/helpers": "0.5.12",
         "@t3-oss/env-core": "^0.11.0",
         "@tailwindcss/forms": "^0.5.7",
