chore(docker-compose): update password to password hash for vpn

--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -104,6 +104,6 @@ TUNNEL_IP=${DEFAULT_NETWORK_PREFIX}.x
 TZ=Europe/Berlin
 
 VPN_PORT=51821
-VPN_PASSWORD=password
+VPN_PASSWORD_HASH=hash
 
 WANDB_PORT=8080
