--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
         "flowbite-svelte": "^0.46.15",
         "glob": "^11.0.0",
         "husky": "^9.1.4",
+        "inquirer": "^10.2.2",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "jest-environment-node": "^29.7.0",
@@ -114,7 +115,8 @@
         "typescript": "5.5.4",
         "vite": "^5.4.1",
         "vitepress": "1.3.2",
-        "vitest": "^2.0.5"
+        "vitest": "^2.0.5",
+        "yaml": "^2.5.1"
     },
     "dependencies": {
         "@directus/sdk": "^16.1.2",
