--- a/tools/secrets-manager/project.json
+++ b/tools/secrets-manager/project.json
@@ -1,5 +1,5 @@
 {
-    "name": "secrets-manager",
+    "name": "@codesdowork/nx-secrets-manager",
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "tools/secrets-manager/src",
     "projectType": "library",
@@ -42,6 +42,21 @@
             "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
             "options": {
                 "jestConfig": "tools/secrets-manager/jest.config.ts"
+            }
+        }
+    },
+    "release": {
+        "version": {
+            "generatorOptions": {
+                "packageRoot": "dist/tools/secrets-manager",
+                "currentVersionResolver": "registry"
+            }
+        }
+    },
+    "targetDefaults": {
+        "nx-release-publish": {
+            "options": {
+                "packageRoot": "dist/tools/secrets-manager"
             }
         }
     }
