--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,9 @@
         {
             "files": "*.json",
             "parser": "jsonc-eslint-parser",
-            "rules": {}
+            "rules": {
+                "@nx/dependency-checks": "error"
+            }
         },
         {
             "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
