--- a/tools/secrets-manager/package.json
+++ b/tools/secrets-manager/package.json
@@ -25,9 +25,14 @@
     },
     "dependencies": {
         "@nx/devkit": "19.6.0",
-        "tslib": "^2.3.0"
+        "inquirer": "10.2.2",
+        "tslib": "2.6.3",
+        "yaml": "2.5.1",
+        "zod": "3.23.8"
     },
-    "type": "commonjs",
+    "publishConfig": {
+        "access": "public"
+    },
     "main": "./src/index.js",
     "typings": "./src/index.d.ts",
     "generators": "./generators.json"
