--- a/tools/secrets-manager/project.json
+++ b/tools/secrets-manager/project.json
@@ -43,6 +43,12 @@
             "options": {
                 "jestConfig": "tools/secrets-manager/jest.config.ts"
             }
+        },
+        "publish": {
+            "executor": "nx:run-commands",
+            "options": {
+                "command": "npm publish dist/tools/secrets-manager"
+            }
         }
     }
 }
